src/app/shared/header/header.component.css
header {
    height: 70px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 5px 30px;
}

.logo-container {
    height: 90%;
}

.logo {
    height: 100%;
    max-height: 75px;
}

.logo:hover {
    cursor: pointer;
}

.nav-links {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    list-style: none;
}

.links {
    color: black;
    text-decoration: none;
    transition: color 0.3s;
    margin: 0 30px; 
}

.links:hover {
    color: #717171;
    cursor: pointer;
}

.cart-link-container {
    position: relative;
}

.cart-notification {
    display: inline-block;
    background-color: #dc7c81;
    color: white;
    border-radius: 12px;
    padding: 2px 6px;
    font-size: 0.75rem;
    position: absolute;
    top: -8px;
    right: 10px;
}


@media (max-width: 730px) {
    header {
        flex-direction: column;
        align-items: center;
        padding: 20px;
        height: auto;
    }

    .nav-links {
        margin-left: -15px;
    }

    
    .cart-notification {
        top: -5px;
    }
}

@media (max-width: 500px) {

    .logo {
        height: 50px;
    }

    .nav-links {
        width: 95%;
    }

    .links {
        margin: 0 15px; 
    }

    .nav-links {
        margin-left: 0;
    }

    .cart-notification {
        top: -10px;
        right: 0px;
    }

}

